[gd_scene load_steps=9 format=3 uid="uid://cusrydlnh0qj1"]

[ext_resource type="Texture2D" uid="uid://daefwxou2v824" path="res://common/art/particles/circle.png" id="1_anvcx"]
[ext_resource type="Script" uid="uid://cloi85fldiwk2" path="res://components/enemy_components/tunneling_detection/tunneling_detection.gd" id="1_q21j4"]

[sub_resource type="Curve" id="Curve_nc130"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_d1olc"]
curve = SubResource("Curve_nc130")

[sub_resource type="Curve" id="Curve_uma2o"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_v3b4j"]
curve = SubResource("Curve_uma2o")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yeavd"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 25.0
initial_velocity_max = 25.0
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.4
scale_curve = SubResource("CurveTexture_v3b4j")
color = Color(1, 1, 1, 0.513726)
alpha_curve = SubResource("CurveTexture_d1olc")

[sub_resource type="CircleShape2D" id="CircleShape2D_ndcnx"]
radius = 7.0

[node name="TunnelingDetection" type="Area2D"]
collision_layer = 0
script = ExtResource("1_q21j4")

[node name="TunnelingParticles" type="GPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_yeavd")
texture = ExtResource("1_anvcx")
lifetime = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ndcnx")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
